--- a/index.html
+++ b/index.html
@@ -1504,26 +1504,10 @@ BP 20000 Libreville</div>
                         </div>
                     </div>
 
-                    <!-- Liste des partenaires -->
-                    <div class="partners-section">
-                        <h3>Nos partenaires</h3>
-                        <div class="partners-list">
-                            <div class="partner-item" onclick="openPartner('ckdo')">
-                                <img src="assets/logos/ckdo-logo.png" alt="CKDO" class="partner-logo">
-                                <div class="partner-info">
-                                    <h4>CKDO Gabon</h4>
-                                    <p>Supermarché & Shopping</p>
-                                    <span class="partner-badge">-15% avec K-Bank</span>
-                                </div>
-                            </div>
-                            <!-- Autres partenaires... -->
-                        </div>
-                    </div>
-
                     <!-- Section Partenaires Premium avec logos -->
                     <div class="premium-partners-section">
-                        <h3>🚀 Partenaires Premium</h3>
-                        <p class="section-subtitle">Bénéficiez d'avantages exclusifs avec nos partenaires internationaux</p>
+                        <h3>🚀 Autres partenaires</h3>
+                        <p class="section-subtitle">Bénéficiez d'avantages exclusifs avec les grandes marques internationales</p>
                         
                         <div class="premium-partners-grid">
                             <!-- Microsoft -->
@@ -1664,7 +1648,7 @@ BP 20000 Libreville</div>
                         <div class="partners-cta">
                             <button class="cta-button" onclick="showAllPremiumPartners()">
                                 <i class="fas fa-store"></i>
-                                Voir tous nos partenaires
+                                Voir toutes les marques
                             </button>
                         </div>
                     </div>
