--- a/index.html
+++ b/index.html
@@ -1367,55 +1367,32 @@ BP 20000 Libreville</div>
                     </div>
                     <div class="categories-grid">
                         <div class="category-card" data-category="restauration">
-                            <div class="category-image-container">
-                                <img src="./assets/restauration.jpg" alt="Restauration" class="category-bg-image">
-                                <div class="category-overlay">
-                                    <i class="fas fa-utensils category-icon-modern"></i>
-                                </div>
+                            <div class="category-icon" style="background-image: url('./assets/restauration.jpg');">
                             </div>
                             <div class="category-content">
-                                <span class="category-name">Restauration</span>
-                                <span class="category-count">8 partenaires</span>
-                                <div class="category-badge">-20%</div>
+                                <span class="category-name">Restaurant</span>
                             </div>
                         </div>
                         <div class="category-card" data-category="shopping">
-                            <div class="category-image-container">
-                                <img src="./assets/logos/shopping.png" alt="Shopping" class="category-bg-image">
-                                <div class="category-overlay">
-                                    <i class="fas fa-shopping-bag category-icon-modern"></i>
-                                </div>
+                            <div class="category-icon" style="background-image: url('./assets/logos/shopping.png');">
                             </div>
                             <div class="category-content">
                                 <span class="category-name">Shopping</span>
-                                <span class="category-count">6 partenaires</span>
-                                <div class="category-badge">-15%</div>
                             </div>
                         </div>
                         <div class="category-card" data-category="loisirs">
-                            <div class="category-image-container">
-                                <img src="./assets/logos/loisirs.jpg" alt="Loisirs" class="category-bg-image">
-                                <div class="category-overlay">
-                                    <i class="fas fa-gamepad category-icon-modern"></i>
-                                </div>
+                            <div class="category-icon" style="background-image: url('./assets/logos/loisirs.jpg');">
                             </div>
                             <div class="category-content">
                                 <span class="category-name">Loisirs</span>
-                                <span class="category-count">4 partenaires</span>
-                                <div class="category-badge">-25%</div>
                             </div>
                         </div>
                         <div class="category-card" data-category="pharmacie">
-                            <div class="category-image-container">
-                                <img src="./assets/pharmacie.jpg" alt="Pharmacie" class="category-bg-image">
-                                <div class="category-overlay">
-                                    <i class="fas fa-pills category-icon-modern"></i>
-                                </div>
+                            <div class="category-icon category-icon-fallback">
+                                <i class="fas fa-pills"></i>
                             </div>
                             <div class="category-content">
                                 <span class="category-name">Pharmacie</span>
-                                <span class="category-count">3 partenaires</span>
-                                <div class="category-badge">-10%</div>
                             </div>
                         </div>
                     </div>
@@ -1597,34 +1574,60 @@ BP 20000 Libreville</div>
                     </div>
                 </div>
 
-                <!-- Section statistiques -->
-                <div class="stats-section">
-                    <div class="stats-grid">
-                        <div class="stat-item">
-                            <div class="stat-icon">
-                                <i class="fas fa-shield-alt"></i>
-                            </div>
-                            <div class="stat-content">
-                                <span class="stat-number">100%</span>
-                                <span class="stat-label">Sécurisé</span>
-                            </div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-icon">
-                                <i class="fas fa-users"></i>
-                            </div>
-                            <div class="stat-content">
-                                <span class="stat-number">25K+</span>
-                                <span class="stat-label">Utilisateurs</span>
+                <!-- Section autres partenaires -->
+                <div class="other-partners-section">
+                    <div class="section-header">
+                        <h3>Autres partenaires</h3>
+                    </div>
+                    <div class="partners-logos-grid">
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="https://logo.clearbit.com/microsoft.com" alt="Microsoft" class="partner-brand-logo">
                             </div>
                         </div>
-                        <div class="stat-item">
-                            <div class="stat-icon">
-                                <i class="fas fa-handshake"></i>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="https://logo.clearbit.com/nike.com" alt="Nike" class="partner-brand-logo">
                             </div>
-                            <div class="stat-content">
-                                <span class="stat-number">50+</span>
-                                <span class="stat-label">Partenaires</span>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="https://logo.clearbit.com/tesla.com" alt="Tesla" class="partner-brand-logo">
+                            </div>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="./assets/logos/airtel-money.png" alt="Airtel" class="partner-brand-logo">
+                            </div>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="https://logo.clearbit.com/reebok.com" alt="Reebok" class="partner-brand-logo">
+                            </div>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="https://logo.clearbit.com/airfrance.com" alt="Air France" class="partner-brand-logo">
+                            </div>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="https://logo.clearbit.com/samsung.com" alt="Samsung" class="partner-brand-logo">
+                            </div>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="https://logo.clearbit.com/apple.com" alt="Apple" class="partner-brand-logo">
+                            </div>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="https://logo.clearbit.com/google.com" alt="Google" class="partner-brand-logo">
+                            </div>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="./assets/logos/Western-union.png" alt="Western Union" class="partner-brand-logo">
                             </div>
                         </div>
                     </div>
