--- a/index.html
+++ b/index.html
@@ -1584,51 +1584,61 @@ BP 20000 Libreville</div>
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/microsoft.com" alt="Microsoft" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Microsoft</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/nike.com" alt="Nike" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Nike</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/tesla.com" alt="Tesla" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Tesla</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="./assets/logos/airtel-money.png" alt="Airtel" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Airtel</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/reebok.com" alt="Reebok" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Reebok</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/airfrance.com" alt="Air France" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Air France</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/samsung.com" alt="Samsung" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Samsung</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/apple.com" alt="Apple" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Apple</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/google.com" alt="Google" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Google</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="./assets/logos/Western-union.png" alt="Western Union" class="partner-brand-logo">
                             </div>
+                            <span class="partner-brand-name">Western Union</span>
                         </div>
                     </div>
                 </div>
