--- a/index.html
+++ b/index.html
@@ -1583,24 +1583,28 @@ BP 20000 Libreville</div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/microsoft.com" alt="Microsoft" class="partner-brand-logo">
+                                <div class="partner-discount-badge">-15%</div>
                             </div>
                             <span class="partner-brand-name">Microsoft</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/nike.com" alt="Nike" class="partner-brand-logo">
+                                <div class="partner-discount-badge">-20%</div>
                             </div>
                             <span class="partner-brand-name">Nike</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/tesla.com" alt="Tesla" class="partner-brand-logo">
+                                <div class="partner-discount-badge">-10%</div>
                             </div>
                             <span class="partner-brand-name">Tesla</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="./assets/logos/airtel-money.png" alt="Airtel" class="partner-brand-logo">
+                                <div class="partner-discount-badge">-15%</div>
                             </div>
                             <span class="partner-brand-name">Airtel</span>
                         </div>
