--- a/index.html
+++ b/index.html
@@ -1604,14 +1604,14 @@ BP 20000 Libreville</div>
                         <div class="partner-card">
                             <div class="partner-image">
                                 <img src="./assets/CK2.png" alt="CKDO" class="partner-logo">
-                                <div class="discount-badge">-25%</div>
+                                <div class="discount-badge">-5%</div>
                                 <div class="partner-favorite">
                                     <i class="far fa-heart"></i>
                                 </div>
                             </div>
                             <div class="partner-details">
                                 <h4>CKDO</h4>
-                                <p>Mode & Lifestyle</p>
+                                <p>Électroménager</p>
                                 <div class="partner-rating">
                                     <div class="stars">
                                         <i class="fas fa-star"></i>
@@ -1620,7 +1620,7 @@ BP 20000 Libreville</div>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star-half-alt"></i>
                                     </div>
-                                    <span>4.7</span>
+                                    <span style="color: #1e293b;">4.7</span>
                                 </div>
                                 <div class="partner-benefits">
                                     <span class="benefit">Livraison gratuite</span>
@@ -1648,11 +1648,10 @@ BP 20000 Libreville</div>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <span>4.9</span>
+                                    <span style="color: #1e293b;">4.9</span>
                                 </div>
                                 <div class="partner-benefits">
                                     <span class="benefit">Café offert</span>
-                                    <span class="benefit">Points fidélité</span>
                                 </div>
                             </div>
                         </div>
@@ -1660,7 +1659,7 @@ BP 20000 Libreville</div>
                         <div class="partner-card">
                             <div class="partner-image">
                                 <img src="./assets/logos/kfc.jpg" alt="KFC" class="partner-logo">
-                                <div class="discount-badge">-20%</div>
+                                <div class="discount-badge">-10%</div>
                                 <div class="partner-favorite">
                                     <i class="far fa-heart"></i>
                                 </div>
@@ -1676,10 +1675,9 @@ BP 20000 Libreville</div>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star-half-alt"></i>
                                     </div>
-                                    <span>4.6</span>
+                                    <span style="color: #1e293b;">4.6</span>
                                 </div>
                                 <div class="partner-benefits">
-                                    <span class="benefit">Livraison rapide</span>
                                     <span class="benefit">Menu family</span>
                                 </div>
                             </div>
@@ -1688,14 +1686,14 @@ BP 20000 Libreville</div>
                         <div class="partner-card">
                             <div class="partner-image">
                                 <img src="./assets/logos/mbolo.png" alt="Mbolo" class="partner-logo">
-                                <div class="discount-badge">-10%</div>
+                                <div class="discount-badge">-5%</div>
                                 <div class="partner-favorite">
                                     <i class="far fa-heart"></i>
                                 </div>
                             </div>
                             <div class="partner-details">
                                 <h4>Mbolo</h4>
-                                <p>Services & Paiements</p>
+                                <p>Service et bien</p>
                                 <div class="partner-rating">
                                     <div class="stars">
                                         <i class="fas fa-star"></i>
@@ -1704,10 +1702,9 @@ BP 20000 Libreville</div>
                                         <i class="fas fa-star"></i>
                                         <i class="far fa-star"></i>
                                     </div>
-                                    <span>4.2</span>
+                                    <span style="color: #1e293b;">4.2</span>
                                 </div>
                                 <div class="partner-benefits">
-                                    <span class="benefit">Sans commission</span>
                                     <span class="benefit">Support 24/7</span>
                                 </div>
                             </div>
