--- a/index.html
+++ b/index.html
@@ -1632,7 +1632,7 @@ BP 20000 Libreville</div>
                         <div class="partner-card">
                             <div class="partner-image">
                                 <img src="./assets/paul.jpg" alt="Paul" class="partner-logo">
-                                <div class="discount-badge">-15%</div>
+                                <div class="discount-badge">-5%</div>
                                 <div class="partner-favorite">
                                     <i class="far fa-heart"></i>
                                 </div>
@@ -1712,8 +1712,7 @@ BP 20000 Libreville</div>
 
                         <div class="partner-card">
                             <div class="partner-image">
-                                <img src="./assets/total.jpg" alt="Total" class="partner-logo">
-                                <div class="discount-badge">-12%</div>
+                                <img src="assets/Logo_totalenergies.svg" alt="Total" class="partner-logo">
                                 <div class="partner-favorite">
                                     <i class="far fa-heart"></i>
                                 </div>
@@ -1732,8 +1731,7 @@ BP 20000 Libreville</div>
                                     <span>4.3</span>
                                 </div>
                                 <div class="partner-benefits">
-                                    <span class="benefit">Paiement mobile</span>
-                                    <span class="benefit">Points Club</span>
+                                    <span class="benefit">Points de fidélité</span>
                                 </div>
                             </div>
                         </div>
@@ -1741,7 +1739,6 @@ BP 20000 Libreville</div>
                         <div class="partner-card">
                             <div class="partner-image">
                                 <img src="./assets/logos/moov.png" alt="Moov" class="partner-logo">
-                                <div class="discount-badge">-8%</div>
                                 <div class="partner-favorite">
                                     <i class="far fa-heart"></i>
                                 </div>
@@ -1776,29 +1773,14 @@ BP 20000 Libreville</div>
                     <div class="partners-logos-grid">
                         <div class="partner-logo-item">
                             <div class="logo-container">
-                                <img src="https://logo.clearbit.com/microsoft.com" alt="Microsoft" class="partner-brand-logo">
-                                <div class="partner-discount-badge">-15%</div>
-                            </div>
-                            <span class="partner-brand-name">Microsoft</span>
-                        </div>
-                        <div class="partner-logo-item">
-                            <div class="logo-container">
                                 <img src="https://logo.clearbit.com/nike.com" alt="Nike" class="partner-brand-logo">
-                                <div class="partner-discount-badge">-20%</div>
+                                <div class="partner-discount-badge">-5%</div>
                             </div>
                             <span class="partner-brand-name">Nike</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
-                                <img src="https://logo.clearbit.com/tesla.com" alt="Tesla" class="partner-brand-logo">
-                                <div class="partner-discount-badge">-10%</div>
-                            </div>
-                            <span class="partner-brand-name">Tesla</span>
-                        </div>
-                        <div class="partner-logo-item">
-                            <div class="logo-container">
                                 <img src="./assets/logos/airtel-money.png" alt="Airtel" class="partner-brand-logo">
-                                <div class="partner-discount-badge">-15%</div>
                             </div>
                             <span class="partner-brand-name">Airtel</span>
                         </div>
@@ -1811,20 +1793,9 @@ BP 20000 Libreville</div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
                                 <img src="https://logo.clearbit.com/airfrance.com" alt="Air France" class="partner-brand-logo">
+                                <div class="partner-discount-badge">-5%</div>
                             </div>
                             <span class="partner-brand-name">Air France</span>
-                        </div>
-                        <div class="partner-logo-item">
-                            <div class="logo-container">
-                                <img src="https://logo.clearbit.com/samsung.com" alt="Samsung" class="partner-brand-logo">
-                            </div>
-                            <span class="partner-brand-name">Samsung</span>
-                        </div>
-                        <div class="partner-logo-item">
-                            <div class="logo-container">
-                                <img src="https://logo.clearbit.com/apple.com" alt="Apple" class="partner-brand-logo">
-                            </div>
-                            <span class="partner-brand-name">Apple</span>
                         </div>
                         <div class="partner-logo-item">
                             <div class="logo-container">
@@ -1837,6 +1808,24 @@ BP 20000 Libreville</div>
                                 <img src="./assets/logos/Western-union.png" alt="Western Union" class="partner-brand-logo">
                             </div>
                             <span class="partner-brand-name">Western Union</span>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="assets/citysport.png" alt="City Sport" class="partner-brand-logo">
+                            </div>
+                            <span class="partner-brand-name">City Sport</span>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="assets/fky-gabon.jpg" alt="Fly Gabon" class="partner-brand-logo">
+                            </div>
+                            <span class="partner-brand-name">Fly Gabon</span>
+                        </div>
+                        <div class="partner-logo-item">
+                            <div class="logo-container">
+                                <img src="assets/ckdo.jpg" alt="CKDO" class="partner-brand-logo">
+                            </div>
+                            <span class="partner-brand-name">CKDO</span>
                         </div>
                     </div>
                 </div>
