--- a/index.html
+++ b/index.html
@@ -1658,7 +1658,7 @@ BP 20000 Libreville</div>
 
                         <div class="partner-card">
                             <div class="partner-image">
-                                <img src="./assets/logos/kfc.jpg" alt="KFC" class="partner-logo">
+                                <img src="assets/KFC_logo.svg.png" alt="KFC" class="partner-logo">
                                 <div class="discount-badge">-10%</div>
                                 <div class="partner-favorite">
                                     <i class="far fa-heart"></i>
