--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
             <!-- Page Ajouter un Bénéficiaire -->
             <div class="page add-beneficiary-page" id="add-beneficiary-page">
                 <div class="page-header">
-                    <button class="back-button" onclick="switchTab('transfer')">
+                    <button class="back-button" onclick="switchTab('virement')">
                         <i class="fas fa-arrow-left"></i>
                     </button>
                     <h2>Nouveau Bénéficiaire</h2>
@@ -1021,7 +1021,7 @@
                                 <label class="form-label">Nom complet <span class="required">*</span></label>
                                 <div class="input-wrapper">
                                     <i class="fas fa-user input-icon"></i>
-                                    <input type="text" class="modern-input" id="beneficiary-name" placeholder="Ex: Jean Dupont" required>
+                                    <input type="text" class="modern-input" id="beneficiary-name" placeholder="Ex: Jean Mvoumbi" required>
                                 </div>
                             </div>
 
