--- a/index.html
+++ b/index.html
@@ -1051,9 +1051,9 @@
                                 <label class="form-label">IBAN <span class="required">*</span></label>
                                 <div class="input-wrapper">
                                     <i class="fas fa-credit-card input-icon"></i>
-                                    <input type="text" class="modern-input" id="beneficiary-iban" placeholder="FR76 1234 5678 9012 3456 7890 123" required>
+                                    <input type="text" class="modern-input" id="beneficiary-iban" placeholder="GA21 1234 5678 9012 3456 7890 12" required>
                                 </div>
-                                <div class="input-help">Format: FR76 suivi de 23 chiffres</div>
+                                <div class="input-help">Format: GA21 suivi de 23 chiffres</div>
                             </div>
 
                             <div class="form-group" id="phone-group" style="display: none;">
