--- a/index.html
+++ b/index.html
@@ -1728,7 +1728,7 @@ BP 20000 Libreville</div>
                                         <i class="fas fa-star"></i>
                                         <i class="far fa-star"></i>
                                     </div>
-                                    <span>4.3</span>
+                                    <span style="color: #1e293b;">4.3</span>
                                 </div>
                                 <div class="partner-benefits">
                                     <span class="benefit">Points de fidélité</span>
@@ -1754,7 +1754,7 @@ BP 20000 Libreville</div>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star-half-alt"></i>
                                     </div>
-                                    <span>4.5</span>
+                                    <span style="color: #1e293b;">4.5</span>
                                 </div>
                                 <div class="partner-benefits">
                                     <span class="benefit">Transfert gratuit</span>
