--- a/index.html
+++ b/index.html
@@ -1936,12 +1936,6 @@ BP 20000 Libreville</div>
                             </div>
                             <div class="action-label">Retirer</div>
                         </div>
-                        <div class="action-card" onclick="openVaultAddGoalModal()">
-                            <div class="action-icon">
-                                <i class="fas fa-bullseye"></i>
-                            </div>
-                            <div class="action-label">Objectif</div>
-                        </div>
                         <div class="action-card" onclick="openNewVaultModal()" id="new-vault-action">
                             <div class="action-icon">
                                 <i class="fas fa-vault"></i>
@@ -2157,9 +2151,9 @@ BP 20000 Libreville</div>
                         </button>
                     </div>
                     
-                    <div class="vault-info-message">
+                    <div class="vault-info-message" id="vault-info-message">
                         <i class="fas fa-info-circle"></i>
-                        <p>Vous pouvez créer jusqu'à 2 coffres-forts supplémentaires pour mieux organiser votre épargne.</p>
+                        <p id="vault-info-text">Vous pouvez créer jusqu'à 2 coffres-forts supplémentaires pour mieux organiser votre épargne.</p>
                     </div>
                     
                     <div class="vault-input-group">
