--- a/index.html
+++ b/index.html
@@ -1947,8 +1947,7 @@ BP 20000 Libreville</div>
                     <!-- Section objectif d'épargne (un seul) -->
                     <div class="vault-goal-section">
                         <div class="section-header">
-                            <h3>Mon objectif d'épargne</h3>
-                            <a onclick="openVaultAddGoalModal()" id="add-goal-link">Ajouter</a>
+                            <h3>Mon objectif d'économie</h3>
                         </div>
                         <div class="vault-goal-container" id="vault-goal-container">
                             <!-- L'objectif d'épargne sera généré dynamiquement -->
@@ -1962,25 +1961,14 @@ BP 20000 Libreville</div>
 
                     <!-- Sections historiques -->
                     <div class="vault-history-sections" style="margin-bottom: 100px;">
-                        <!-- Historique des dépôts -->
+                        <!-- Historique des transactions -->
                         <div class="transactions-section">
                             <div class="section-header">
-                                <h3><i class="fas fa-arrow-down" style="color: #22c55e; margin-right: 8px;"></i>Dépôts récents</h3>
-                                <a onclick="showAllVaultDeposits()">Tout voir</a>
+                                <h3><i class="fas fa-exchange-alt" style="color: #3b82f6; margin-right: 8px;"></i>Transactions</h3>
+                                <a onclick="showAllVaultTransactions()">Tout voir</a>
                             </div>
-                            <div class="transactions-list" id="vault-deposits-list">
-                                <!-- L'historique des dépôts sera généré dynamiquement -->
-                            </div>
-                        </div>
-
-                        <!-- Historique des retraits -->
-                        <div class="transactions-section" style="margin-top: 20px;">
-                            <div class="section-header">
-                                <h3><i class="fas fa-arrow-up" style="color: #ef4444; margin-right: 8px;"></i>Retraits récents</h3>
-                                <a onclick="showAllVaultWithdrawals()">Tout voir</a>
-                            </div>
-                            <div class="transactions-list" id="vault-withdrawals-list">
-                                <!-- L'historique des retraits sera généré dynamiquement -->
+                            <div class="transactions-list" id="vault-transactions-list">
+                                <!-- L'historique des transactions sera généré dynamiquement -->
                             </div>
                         </div>
                     </div>
@@ -2164,9 +2152,10 @@ BP 20000 Libreville</div>
                     </div>
                     
                     <div class="vault-input-group">
-                        <label>Description (optionnel)</label>
-                        <div class="vault-input-field">
-                            <input type="text" placeholder="Ex: Pour mes prochaines vacances" id="new-vault-description">
+                        <label>Montant objectif</label>
+                        <div class="vault-amount-input">
+                            <span class="vault-currency-symbol">F</span>
+                            <input type="number" placeholder="0,00" id="new-vault-target">
                         </div>
                     </div>
                     
