--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
                                 <label class="form-label">Numéro de téléphone <span class="required">*</span></label>
                                 <div class="input-wrapper">
                                     <i class="fas fa-phone input-icon"></i>
-                                    <input type="tel" class="modern-input" id="beneficiary-phone" placeholder="+241 01 23 45 67" pattern="[\+]?[0-9\s\-]{8,15}" title="Veuillez saisir un numéro valide">
+                                    <input type="tel" class="modern-input" id="beneficiary-phone" placeholder="+241 01 23 45 67" pattern="[\+]?[0-9\s\-]{8,15}" maxlength="15" title="Veuillez saisir un numéro valide (max 15 caractères)">
                                 </div>
                             </div>
 
