--- a/index.html
+++ b/index.html
@@ -1854,7 +1854,7 @@ BP 20000 Libreville</div>
                             <div class="vault-input-group">
                                 <label>Montant objectif</label>
                                 <div class="vault-amount-input">
-                                    <span class="vault-currency-symbol">F</span>
+                                    <span class="vault-currency-symbol">Fcfa</span>
                                     <input type="number" placeholder="0,00" id="first-vault-target">
                                 </div>
                             </div>
@@ -1967,7 +1967,7 @@ BP 20000 Libreville</div>
                     <div class="vault-input-group">
                         <label>Montant à déposer</label>
                         <div class="vault-amount-input">
-                            <span class="vault-currency-symbol">F</span>
+                            <span class="vault-currency-symbol">Fcfa</span>
                             <input type="number" placeholder="0,00" id="vault-deposit-amount">
                         </div>
                     </div>
@@ -2019,7 +2019,7 @@ BP 20000 Libreville</div>
                     <div class="vault-input-group">
                         <label>Montant à retirer</label>
                         <div class="vault-amount-input">
-                            <span class="vault-currency-symbol">F</span>
+                            <span class="vault-currency-symbol">Fcfa</span>
                             <input type="number" placeholder="0,00" id="vault-withdraw-amount">
                         </div>
                     </div>
@@ -2073,7 +2073,7 @@ BP 20000 Libreville</div>
                     <div class="vault-input-group">
                         <label>Montant cible</label>
                         <div class="vault-amount-input">
-                            <span class="vault-currency-symbol">F</span>
+                            <span class="vault-currency-symbol">Fcfa</span>
                             <input type="number" placeholder="0,00" id="vault-goal-target">
                         </div>
                     </div>
@@ -2131,7 +2131,7 @@ BP 20000 Libreville</div>
                     <div class="vault-input-group">
                         <label>Montant objectif</label>
                         <div class="vault-amount-input">
-                            <span class="vault-currency-symbol">F</span>
+                            <span class="vault-currency-symbol">Fcfa</span>
                             <input type="number" placeholder="0,00" id="new-vault-target">
                         </div>
                     </div>
