--- a/index.html
+++ b/index.html
@@ -1578,18 +1578,19 @@ BP 20000 Libreville</div>
                             </div>
                         </div>
                         <div class="category-card" data-category="loisirs">
-                            <div class="category-icon" style="background-image: url('./assets/logos/loisirs.jpg');">
+                            <div class="category-icon category-icon-fallback">
+                                <i class="fas fa-gamepad"></i>
                             </div>
                             <div class="category-content">
                                 <span class="category-name">Loisirs</span>
                             </div>
                         </div>
-                        <div class="category-card" data-category="pharmacie">
+                        <div class="category-card" data-category="hotels">
                             <div class="category-icon category-icon-fallback">
-                                <i class="fas fa-pills"></i>
+                                <i class="fas fa-hotel"></i>
                             </div>
                             <div class="category-content">
-                                <span class="category-name">Pharmacie</span>
+                                <span class="category-name">Hôtels</span>
                             </div>
                         </div>
                     </div>
