--- a/index.html
+++ b/index.html
@@ -1578,16 +1578,14 @@ BP 20000 Libreville</div>
                             </div>
                         </div>
                         <div class="category-card" data-category="loisirs">
-                            <div class="category-icon category-icon-fallback">
-                                <i class="fas fa-gamepad"></i>
+                            <div class="category-icon" style="background-image: url('./assets/loisirs.jpg');">
                             </div>
                             <div class="category-content">
                                 <span class="category-name">Loisirs</span>
                             </div>
                         </div>
                         <div class="category-card" data-category="hotels">
-                            <div class="category-icon category-icon-fallback">
-                                <i class="fas fa-hotel"></i>
+                            <div class="category-icon" style="background-image: url('./assets/hotels .jpg');">
                             </div>
                             <div class="category-content">
                                 <span class="category-name">Hôtels</span>
